--- a/Protokoll/template.tex
+++ b/Protokoll/template.tex
@@ -24,11 +24,11 @@ dd
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{abstract}
-Untersucht wird das Lumineszenzspektrum einer InGaP-Photodiode (pn-Übergang) im Temperaturbereich zwischen
+Untersucht wird das Lumineszenzspektrum einer InGaP-Photodiode im Temperaturbereich zwischen
 $T=80\text{ K}$ und $T=250\text{ K}$. Die Fluoreszenzmessung wird mithilfe eines Czerny-Turner-Spektrometers
-und einer Photomultiplier-Tube realisiert. Wir treffen Aussagen über das Spektrum, die Temperaturabhängigkeit des
-Lumineszenzpeaks, den thermischen Einluss auf die integrierte Peakintensität und wir berechnen die Aktivierungsenergie
-von InGaP anhand der Arrheniusgleichung.
+und einer Photomultiplier-Tube realisiert. Wir treffen Aussagen über den Verlauf des Spektrums, die
+Temperaturabhängigkeit des Lumineszenzpeaks, den thermischen Einluss auf die integrierte Peakintensität und
+wir geben eine Abschätzung für die Aktivierungsenergie von InGaP an.
 \end{abstract}
 
 
