--- a/Protokoll/template.tex
+++ b/Protokoll/template.tex
@@ -66,6 +66,16 @@ quis nisi.
 
 \section{Theorie}
 
+Unter Lumineszenz versteht man Strahlung, die beim Übergang eines Systems von einem angeregten Zustand
+in einen niederenergetischen Zustand emittiert wird. Bei Halbleitern finden diese elektronischen Übergänge vor allem
+vom Leitungsband ins Valenzband statt, so dass bei Anregung des Materials mit ausreichend Energie ($E>E_g$) Lumineszenz-
+photonen mit einer der Bandlücke entsprechenden Frequenz erzeugt werden. Liegt ein dotierter Halbleiter vor, speziell z.B.
+eine Heterostruktur mit pn-Übergang, gibt es im Bereich zwischen Leitungs- und Valenzband weiterhin Donator- (knapp unter
+Leitungsbandkante) und Akzeptorzustände (knapp über der Valenzbandkante). Ebenfalls für die Lumineszenz relevant sind sog.
+Exzitonen-Zustände (gebundene Elektron-Loch-Paare). Bei guter Kühlung (wenig thermischer Anregung) sind neben der Fluoreszenz
+aufgrund der Rekombination von Elektronen aus dem Valenzband ins Leitungsband auch andere Übergänge, z.B. vom Donator- zum
+zum Akzeptorniveau (D,A) oder ins Valenzband (D,h) sichtbar.
+
 Hier mal noch Beispiele wie man Gleichungen richtig referenziert, siehe
 Gleichung.~\ref{eq:first-equation} :
 \begin{equation}
