--- a/Protokoll/template.tex
+++ b/Protokoll/template.tex
@@ -25,7 +25,7 @@ nofootinbib,superscriptaddress]{revtex4-1}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{abstract}
 Untersucht wird das Lumineszenzspektrum einer InGaP-Photodiode im Temperaturbereich zwischen
-$80\text{ K}$ und $250\text{ K}$. Die Fluoreszenzmessung wird mithilfe eines Czerny-Turner-Spektrometers
+$80\text{ K}$ und $255\text{ K}$. Die Fluoreszenzmessung wird mithilfe eines Czerny-Turner-Spektrometers
 und einer Photomultiplier-Tube realisiert. Wir treffen Aussagen über den Verlauf des Spektrums, die
 Temperaturabhängigkeit des Lumineszenzpeaks, den thermischen Einluss auf die integrierte Peakintensität und
 wir geben eine Abschätzung für die Aktivierungsenergie von InGaP an.
@@ -45,7 +45,7 @@ beschreiben. So finden die elektronischen Übergänge vor allem aus dem Leitungs
 Anregung des Materials mit ausreichend Energie ($E>E_g$) Lumineszenzphotonen mit einer der Bandlücke entsprechenden
 Frequenz erzeugt werden (direkter Übergang).\newline
 
-\noindent Es gibt verschiedene Rekombinationswege für ein sich im angeregten Zustand befindlichendes System (s. \ref{fig:rekomb} ) \cite{saarland}.
+\noindent Es gibt verschiedene Rekombinationswege für ein sich im angeregten Zustand befindlichendes System (s. Abb. \ref{fig:rekomb} ) \cite{saarland}.
 Liegt ein dotierter Halbleiter vor, speziell z.B. eine Heterostruktur mit pn-Übergang, gibt es im Bereich zwischen Leitungs-
 und Valenzband Donator- (knapp unter Leitungsbandkante) und Akzeptorzustände (knapp über der Valenzbandkante). Ebenfalls für die
 Lumineszenz relevant sind sog. Exzitonen-Zustände (gebundene Elektron-Loch-Paare). Bei guter Kühlung (wenig thermischer
@@ -65,8 +65,8 @@ Anregung) sind neben dem direkten Übergang (LB$\rightarrow$VB) daher auch ander
 
 \section{Experiment}
 
-\noindent Der Versuchsaufbau ist schematisch in \ref{fig:versuch} dargestellt. Die Anregung der InGaP-Diode erfolgt durch Anlegen einer
-Spannung mittels einer externen Konstantstromversorgung. Dazu sind die elektrischen Verbindungen bereits an der Probe angebracht.
+\noindent Der Versuchsaufbau ist schematisch in Abbildung \ref{fig:versuch} dargestellt. Die Anregung der InGaP-Diode erfolgt durch Anlegen einer
+Spannung mittels einer externen Versorgung, die einen konstanten Strom von $I=30\text{$\mu$A}$ liefert. Dazu sind die elektrischen Verbindungen bereits an der Probe angebracht.
 Diese befindet sich in einem evakuierten ($p\sim 2\text{ Pa}$) und auf $80\text{ K}$ Stickstoff-temperierten Kryostaten. Die Temperaturmessung
 erfolgt durch einen Sensor, der möglichst nahe an der Probe platziert wurde.
 
@@ -83,7 +83,74 @@ Monochromator (Schrittmotorsteuerung) können verschiedene Spektralbereiche sele
 gemessen wird. Dieser arbeitet mit einer Beschleunigungsspannung von $U_\text{PMT}=2,2\text{ kV}$. Zwecks Maximierung des
 Signal-Rausch-Verhältnisses wurde die PMT ebenfalls gekühlt (Peltierelement mit Wasserkühlung). Das Signal der Photonenvervielfachers
 gelangt dann über einen Analog-Digital-Wandler zum Computer, der die Messsignale zusammen mit der Schrittmotorposition des Monochromators
-abspeichert und zu einem Energiespektrum verarbeitet.
+abspeichert und zu einem Energiespektrum verarbeitet.\newpage
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\section{Daten und Analyse}
+
+\noindent Die bei verschiedenen Temperaturen aufgenommenen Spektren wurden einem Gauß- bzw. Doppelgaußfit
+unterzogen (Matlab) und sind in Abbildung \ref{fig:spek} dargestellt. Deutlich zu erkennen ist die Peakverbreiterung
+und die Abnahme der Lumineszenzintensität bei steigenden Temperaturen. Oberhalb von ca. $165\text{ K}$
+ist eine Verschmierung der linken Peakhälften hin zu kürzeren Wellenlängen zu erkennen.
+
+\begin{figure}[h!]
+  \centering
+  \includegraphics[width=0.48\textwidth]{../Messung/allfitsplot.eps}
+  \caption{\label{fig:spek} (1,2-fach) gauß-gefittete Lumineszenzspektren von InGaP zwischen $80\text{ K}$ und $250\text{ K}$ (vlnr)}
+\end{figure}
+
+\begin{figure}[b!]
+  \centering
+  \includegraphics[width=0.48\textwidth]{../Messung/energtemp.eps}
+  \caption{\label{fig:EgapT} Temperaturabhängigkeit der Bandlückenenergie}
+\end{figure}
+
+\noindent In den Abbildungen \ref{fig:EgapT} \& \ref{fig:lamT} sind die Temperaturabhängigkeiten der
+Bandlückenenergie und der entsprechenden Wellenlänge dargestellt. Zu erkennen ist eine deutliche
+Verkleinerung der Bandlücke, d.h. eine Rotverschiebung des Signals, bei steigenden Temperaturen.
+Die Rotverschiebung konnte auch durch direkte Beobachtung festgestellt werden.
+
+Die integrierten Intensitäten der Spektrallinien sind in Abb. \ref{fig:intInt} dargestellt.
+
+Es ist naheliegend die Lage der Peakpositionen und die erwarteten Energieverschiebungen
+bei Temperaturänderung theoretisch zu betrachten. Dazu wurde die vereinfachende Annahme getroffen,
+dass die Zusammensetzung des $\text{In}_x\text{Ga}_{1-x}\text{P}$ auf Gitteranpassung an GaAs optimiert wurde.
+Der unter dieser Voraussetzung von uns berechnete, optimale Wert ist $x=0.515$. Daraus folgt unter Verwendung der
+Bandlücken von Indium und Gallium, jeweils gewichtet mit dem Faktor x, eine theoretische Bandlückenenergie
+von $E_{g,InGaP} = 1.89\text{ eV}$ bei $T=300\text{ K}$.
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam id facilisis ligula,
+a ultrices nibh. Nullam suscipit tellus nec mauris fermentum, ornare luctus neque
+tincidunt. Aenean commodo tincidunt varius. Phasellus faucibus metus non erat
+consectetur bibendum. Duis et luctus risus, at egestas justo. Nunc eleifend lacus
+ac laoreet scelerisque. Aenean cursus dignissim magna in ultrices. In eget nisl
+quis nisi.
+
+\begin{figure}[b]
+  \centering
+  \includegraphics[width=0.48\textwidth]{../Messung/peaktemp.eps}
+  \caption{\label{fig:lamT} Temperaturabhängigkeit der Lum.-Wellenlänge}
+\end{figure}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Schlussfolgerung}
+
+Schlussoflgerung, sollten wir mal was von nem Buch oder so entnehmen nutzen wir:
+
+
+\begin{quote}
+  Ein Zitat mit Referenz auf das Buch\cite{melissinos1966}
+\end{quote}
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam id facilisis ligula,
+a ultrices nibh. Nullam suscipit tellus nec mauris fermentum, ornare luctus neque
+tincidunt. Aenean commodo tincidunt varius. Phasellus faucibus metus non erat
+consectetur bibendum. Duis et luctus risus, at egestas justo. Nunc eleifend lacus
+ac laoreet scelerisque. Aenean cursus dignissim magna in ultrices. In eget nisl
+quis nisi.
 
 Hier mal noch Beispiele wie man Gleichungen richtig referenziert, siehe
 Gleichung.~\ref{eq:first-equation} :
@@ -137,20 +204,7 @@ Natürlich gibts auch die guten alten subequations wie (\ref{subeq:1}) und
 \end{eqnarray}
 \end{subequations}
 
-
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Daten und Analyse}
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam id facilisis ligula,
-a ultrices nibh. Nullam suscipit tellus nec mauris fermentum, ornare luctus neque
-tincidunt. Aenean commodo tincidunt varius. Phasellus faucibus metus non erat
-consectetur bibendum. Duis et luctus risus, at egestas justo. Nunc eleifend lacus
-ac laoreet scelerisque. Aenean cursus dignissim magna in ultrices. In eget nisl
-quis nisi. Tabelle \ref{tab:table1}:
-
-
+Tabelle \ref{tab:table1}:
 \begin{table}[h]
 \caption{\label{tab:table1}Eine Tabelle mit Fußnoten}
 \begin{ruledtabular}
@@ -165,26 +219,6 @@ Tl& 0.480 & 18.90 & 3.550 & & & & \\
 \end{ruledtabular}
 \footnotetext[1]{Entnommen aus Ref.~\cite{bevington2003}.}
 \end{table}
-
-
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Schlussfolgerung}
-
-Schlussoflgerung, sollten wir mal was von nem Buch oder so entnehmen nutzen wir:
-
-
-\begin{quote}
-  Ein Zitat mit Referenz auf das Buch\cite{melissinos1966}
-\end{quote}
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam id facilisis ligula,
-a ultrices nibh. Nullam suscipit tellus nec mauris fermentum, ornare luctus neque
-tincidunt. Aenean commodo tincidunt varius. Phasellus faucibus metus non erat
-consectetur bibendum. Duis et luctus risus, at egestas justo. Nunc eleifend lacus
-ac laoreet scelerisque. Aenean cursus dignissim magna in ultrices. In eget nisl
-quis nisi.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
