--- a/Protokoll/template.tex
+++ b/Protokoll/template.tex
@@ -114,12 +114,15 @@ Die Rotverschiebung konnte auch durch direkte Beobachtung festgestellt werden.
 
 Die integrierten Intensitäten der Spektrallinien sind in Abb. \ref{fig:intInt} dargestellt.
 
-Es ist naheliegend die Lage der Peakpositionen und die erwarteten Energieverschiebungen
+Es ist naheliegend die Lage der Peakpositionen und deren erwartete Energieverschiebungen
 bei Temperaturänderung theoretisch zu betrachten. Dazu wurde die vereinfachende Annahme getroffen,
 dass die Zusammensetzung des $\text{In}_x\text{Ga}_{1-x}\text{P}$ auf Gitteranpassung an GaAs optimiert wurde.
-Der unter dieser Voraussetzung von uns berechnete, optimale Wert ist $x=0.515$. Daraus folgt unter Verwendung der
-Bandlücken von Indium und Gallium, jeweils gewichtet mit dem Faktor x, eine theoretische Bandlückenenergie
-von $E_{g,InGaP} = 1.89\text{ eV}$ bei $T=300\text{ K}$.
+Der unter dieser Voraussetzung von uns berechnete, optimale Wert ist $x=0.515$. Daraus folgt durch - mit
+x gewichteter - Mittelung der Bandlücken von Indium und Gallium eine theoretische Bandlückenenergie von
+\begin{equation}
+  E_{g,InGaP} = 1.89\text{ eV}\text{ bei }T=300\text{ K}
+   \label{eq:evEgap300K}
+\end{equation}
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam id facilisis ligula,
 a ultrices nibh. Nullam suscipit tellus nec mauris fermentum, ornare luctus neque
