--- a/Protokoll/template.tex
+++ b/Protokoll/template.tex
@@ -90,10 +90,47 @@ abspeichert und zu einem Energiespektrum verarbeitet.\newpage
 
 \section{Daten und Analyse}
 
+\noindent Um eine bessere Einordnung der Ergebnisse zu ermöglichen, wird zunächst die temperaturabhängige Lage des Lumineszenzpeaks
+(entspricht Größe der Bandlücke) mithilfe der Varshni-Formel theoretisch berechnet. Dazu wurde die
+vereinfachende Annahme getroffen, dass die Zusammensetzung des $\text{In}_x\text{Ga}_{1-x}\text{P}$
+auf Gitteranpassung an GaAs optimiert wurde. Der unter dieser Voraussetzung von uns berechnete,
+optimale Wert ist $x=0.515$. Daraus folgt durch, mit x gewichteter, Mittelung der Bandlücken von
+Indium und Gallium eine theoretische Bandlückenenergie von
+\begin{equation}
+  E_{g,th} = 1.89\text{ eV}\text{ bei }T=300\text{ K}
+   \label{eq:evEgap300K}
+\end{equation}
+
+\noindent Das entspricht einer zu erwartenden Wellenlänge von $656,52$ nm. Die empirische
+Varshni-Formel für InGaP (auf GaAs gitterangepasst) lautet:
+\begin{equation}
+  E_{g}(T) = 1,351+0,643x+0,786x^2\text{ (eV), }T=300\text{ K}
+   \label{eq:varshni}
+\end{equation}
+
+Aufgrund der Temperaturdifferenz-bedingten Deformation und der endlichen Ausdehnung des Halbleitermaterials
+führt eine Erwärmung des Kristalls in der Theorie zu einer Verkleinerung der Bandlücke. Gl. \ref{eq:varshni}
+liefert die erwartete Energieverschiebung zwischen $T=80\text{ K}$ und $T=300\text{ K}$:
+\begin{eqnarray}
+  \Delta E_g = 0,05948\text{ eV}
+\\
+  \nonumber
+  \widehat{=}\;\;\Delta\lambda = 20.0\text{ nm}
+\label{eq:evVersch}
+\end{eqnarray}
+
+hier steht noch theoretischer text .. dolor doloris du weißt schon
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam id facilisis ligula,
+a ultrices nibh. Nullam suscipit tellus nec mauris fermentum, ornare luctus neque
+tincidunt. Aenean commodo tincidunt varius. Phasellus faucibus metus non erat
+consectetur bibendum. Duis et luctus risus, at egestas justo. Nunc eleifend lacus
+ac laoreet scelerisque. Aenean cursus dignissim magna in ultrices. In eget nisl
+quis nisi.
+
 \noindent Die bei verschiedenen Temperaturen aufgenommenen Spektren wurden einem Gauß- bzw. Doppelgaußfit
 unterzogen (Matlab) und sind in Abbildung \ref{fig:spek} dargestellt. Deutlich zu erkennen ist die Peakverbreiterung
 und die Abnahme der Lumineszenzintensität bei steigenden Temperaturen. Oberhalb von ca. $165\text{ K}$
-ist eine Verschmierung der linken Peakhälften hin zu kürzeren Wellenlängen zu erkennen.
+ist ein Verschmieren der linken Peakhälften hin zu kürzeren Wellenlängen zu erkennen.
 
 \begin{figure}[h!]
   \centering
@@ -113,16 +150,6 @@ Verkleinerung der Bandlücke, d.h. eine Rotverschiebung des Signals, bei steigen
 Die Rotverschiebung konnte auch durch direkte Beobachtung festgestellt werden.
 
 Die integrierten Intensitäten der Spektrallinien sind in Abb. \ref{fig:intInt} dargestellt.
-
-Es ist naheliegend die Lage der Peakpositionen und deren erwartete Energieverschiebungen
-bei Temperaturänderung theoretisch zu betrachten. Dazu wurde die vereinfachende Annahme getroffen,
-dass die Zusammensetzung des $\text{In}_x\text{Ga}_{1-x}\text{P}$ auf Gitteranpassung an GaAs optimiert wurde.
-Der unter dieser Voraussetzung von uns berechnete, optimale Wert ist $x=0.515$. Daraus folgt durch - mit
-x gewichteter - Mittelung der Bandlücken von Indium und Gallium eine theoretische Bandlückenenergie von
-\begin{equation}
-  E_{g,InGaP} = 1.89\text{ eV}\text{ bei }T=300\text{ K}
-   \label{eq:evEgap300K}
-\end{equation}
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam id facilisis ligula,
 a ultrices nibh. Nullam suscipit tellus nec mauris fermentum, ornare luctus neque
