--- a/Protokoll/template.tex
+++ b/Protokoll/template.tex
@@ -108,14 +108,14 @@ Varshni-Formel für InGaP (auf GaAs gitterangepasst) lautet:
    \label{eq:varshni}
 \end{equation}
 
-Aufgrund der Temperaturdifferenz-bedingten Deformation und der endlichen Ausdehnung des Halbleitermaterials
+\noindent Aufgrund der Temperaturdifferenz-bedingten Deformation und der endlichen Ausdehnung des Halbleitermaterials
 führt eine Erwärmung des Kristalls in der Theorie zu einer Verkleinerung der Bandlücke. Gl. \ref{eq:varshni}
 liefert die erwartete Energieverschiebung zwischen $T=80\text{ K}$ und $T=300\text{ K}$:
 \begin{eqnarray}
   \Delta E_g = 0,05948\text{ eV}
-\\
+  \\
   \nonumber
-  \widehat{=}\;\;\Delta\lambda = 20.0\text{ nm}
+  \Delta\lambda = 20.0\text{ nm}\;\;\;\;\,\,
 \label{eq:evVersch}
 \end{eqnarray}
 
