--- a/Protokoll/template.tex
+++ b/Protokoll/template.tex
@@ -119,13 +119,7 @@ die erwartete Energieverschiebung von InGaP zwischen $T=80\text{ K}$ und $T=300\
 \label{eq:evVersch}
 \end{eqnarray}
 
-hier steht noch theoretischer text .. dolor doloris du weißt schon
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam id facilisis ligula,
-a ultrices nibh. Nullam suscipit tellus nec mauris fermentum, ornare luctus neque
-tincidunt. Aenean commodo tincidunt varius. Phasellus faucibus metus non erat
-consectetur bibendum. Duis et luctus risus, at egestas justo. Nunc eleifend lacus
-ac laoreet scelerisque. Aenean cursus dignissim magna in ultrices. In eget nisl
-quis nisi.
+%%%%
 
 \noindent Die bei verschiedenen Temperaturen aufgenommenen Spektren wurden einem Gauß- bzw. Doppelgaußfit
 unterzogen (Matlab) und sind in Abbildung \ref{fig:spek} dargestellt. Deutlich zu erkennen ist die Peakverbreiterung
@@ -138,7 +132,7 @@ ist ein Verschmieren der linken Peakhälften hin zu kürzeren Wellenlängen zu e
   \caption{\label{fig:spek} (1,2-fach) gauß-gefittete Lumineszenzspektren von InGaP zwischen $80\text{ K}$ und $250\text{ K}$ (vlnr)}
 \end{figure}
 
-\begin{figure}[b!]
+\begin{figure}[t]
   \centering
   \includegraphics[width=0.48\textwidth]{../Messung/energtemp.eps}
   \caption{\label{fig:EgapT} Temperaturabhängigkeit der Bandlückenenergie}
