--- a/Protokoll/template.tex
+++ b/Protokoll/template.tex
@@ -98,8 +98,8 @@ abspeichert und zu einem Energiespektrum verarbeitet.\newpage
 \end{equation}
 Dazu wurde die vereinfachende Annahme getroffen, dass die Zusammensetzung des $\text{In}_x\text{Ga}_{1-x}\text{P}$
 auf Gitteranpassung an GaAs optimiert wurde. Der unter dieser Voraussetzung von uns berechnete,
-optimale Wert ist $x=0.515$. Daraus folgt durch, mit x gewichteter, Mittelung der Bandlücken von
-Indium und Gallium und \ref{eq:varshni} eine theoretische Bandlückenenergie von
+optimale Wert ist $x=0.515$. Daraus folgt durch mit x gewichteter Mittelung der Bandlücken von
+Indium und Gallium und Gl. (\ref{eq:varshni}) eine theoretische Bandlückenenergie von
 \begin{equation}
   E_{g,th} = 1.89\text{ eV}\text{ bei }T=300\text{ K}
    \label{eq:evEgap300K}
@@ -109,7 +109,7 @@ Indium und Gallium und \ref{eq:varshni} eine theoretische Bandlückenenergie von
 
 Aufgrund der Temperaturdifferenz-bedingten Deformation und der endlichen Ausdehnung des Halbleitermaterials
 führt eine Erwärmung des Kristalls in der Theorie zu einer Verkleinerung der Bandlücke. Eine erneute gewichtete
-Mittelung der Bandlückenenergien von InP und GaP bei $T=80\text{ K}$ liefert zusammen mit \ref{eq:evEgap300K}
+Mittelung der Bandlückenenergien von InP und GaP bei $T=80\text{ K}$ liefert zusammen mit (\ref{eq:evEgap300K})
 die erwartete Energieverschiebung von InGaP zwischen $T=80\text{ K}$ und $T=300\text{ K}$:
 \begin{eqnarray}
   \Delta E_g = 0,05948\text{ eV}
@@ -122,8 +122,8 @@ die erwartete Energieverschiebung von InGaP zwischen $T=80\text{ K}$ und $T=300\
 %%%%
 
 \noindent Die bei verschiedenen Temperaturen aufgenommenen Spektren wurden einem Gauß- bzw. Doppelgaußfit
-unterzogen (Matlab) und sind in Abbildung \ref{fig:spek} dargestellt. Deutlich zu erkennen ist die Peakverbreiterung
-und die Abnahme der Lumineszenzintensität bei steigenden Temperaturen. Oberhalb von ca. $165\text{ K}$
+unterzogen (Matlab) und sind in Abbildung \ref{fig:spek} dargestellt. Deutlich zu erkennen ist die Abnahme der
+Lumineszenzintensität und die Peakverbreiterung bei steigenden Temperaturen. Oberhalb von ca. $165\text{ K}$
 ist ein Verschmieren der linken Peakhälften hin zu kürzeren Wellenlängen zu erkennen.
 
 \begin{figure}[h!]
@@ -139,9 +139,9 @@ ist ein Verschmieren der linken Peakhälften hin zu kürzeren Wellenlängen zu e
 \end{figure}
 
 \noindent In den Abbildungen \ref{fig:EgapT} \& \ref{fig:lamT} sind die Temperaturabhängigkeiten der
-Bandlückenenergie und der entsprechenden Wellenlänge dargestellt. Zu erkennen ist eine deutliche
-Verkleinerung der Bandlücke, d.h. eine Rotverschiebung des Signals, bei steigenden Temperaturen.
-Die Rotverschiebung konnte auch durch direkte Beobachtung festgestellt werden.
+Bandlückenenergie und der entsprechenden Wellenlänge dargestellt. Zu erkennen ist eine deutliche Rotverschiebung des
+Intensitätsmaximums (Verkleinerung der Bandlücke) bei steigender Temperatur. Die Rotverschiebung konnte auch durch
+direkte Beobachtung festgestellt werden.
 
 Die integrierten Intensitäten der Spektrallinien sind in Abb. \ref{fig:intInt} dargestellt.
 
