--- a/Protokoll/template.tex
+++ b/Protokoll/template.tex
@@ -122,7 +122,9 @@ die erwartete Energieverschiebung von InGaP zwischen $T=80\text{ K}$ und $T=300\
 %%%%
 
 \noindent Die bei verschiedenen Temperaturen aufgenommenen Spektren wurden einem Gauß- bzw. Doppelgaußfit
-unterzogen (Matlab) und sind in Abbildung \ref{fig:spek} dargestellt. Deutlich zu erkennen ist die Abnahme der
+unterzogen (Matlab) und sind in Abbildung \ref{fig:spek} dargestellt.
+
+Deutlich zu erkennen ist die Abnahme der
 Lumineszenzintensität und die Peakverbreiterung bei steigenden Temperaturen. Oberhalb von ca. $165\text{ K}$
 ist ein Verschmieren der linken Peakhälften hin zu kürzeren Wellenlängen zu erkennen.
 
