--- a/Protokoll/template.tex
+++ b/Protokoll/template.tex
@@ -24,11 +24,11 @@ nofootinbib,superscriptaddress]{revtex4-1}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{abstract}
-Untersucht wird das Lumineszenzspektrum einer InGaP-Photodiode im Temperaturbereich zwischen
+Untersucht wird das Lumineszenzspektrum einer InGaP/GaAs-Photodiode im Temperaturbereich zwischen
 $80\text{ K}$ und $255\text{ K}$. Die Fluoreszenzmessung wird mithilfe eines Czerny-Turner-Spektrometers
 und einer Photomultiplier-Tube realisiert. Wir treffen Aussagen über den Verlauf des Spektrums, die
 Temperaturabhängigkeit des Lumineszenzpeaks, den thermischen Einluss auf die integrierte Peakintensität und
-wir geben eine Abschätzung für die Aktivierungsenergie von InGaP an.
+wir geben eine Abschätzung für die Aktivierungsenergie zur Lumineszenz von InGaP an.
 \end{abstract}
 
 
@@ -65,7 +65,7 @@ Anregung) sind neben dem direkten Übergang (LB$\rightarrow$VB) daher auch ander
 
 \section{Experiment}
 
-\noindent Der Versuchsaufbau ist schematisch in Abbildung \ref{fig:versuch} dargestellt. Die Anregung der InGaP-Diode erfolgt durch Anlegen einer
+\noindent Der Versuchsaufbau ist schematisch in Abbildung \ref{fig:versuch} dargestellt. Die Anregung der Diode erfolgt durch Anlegen einer
 Spannung mittels einer externen Versorgung, die einen konstanten Strom von $I=30\text{$\mu$A}$ liefert. Dazu sind die elektrischen Verbindungen bereits an der Probe angebracht.
 Diese befindet sich in einem evakuierten ($p\sim 2\text{ Pa}$) und auf $80\text{ K}$ Stickstoff-temperierten Kryostaten. Die Temperaturmessung
 erfolgt durch einen Sensor, der möglichst nahe an der Probe platziert wurde.
@@ -90,26 +90,36 @@ abspeichert und zu einem Energiespektrum verarbeitet.\newpage
 
 \section{Daten und Analyse}
 
-\noindent Um eine bessere Einordnung der Ergebnisse zu ermöglichen, wird zunächst die temperaturabhängige Lage des Lumineszenzpeaks
-(entspricht Größe der Bandlücke) mithilfe der empirischen Varshni-Formel theoretisch berechnet:
-\begin{equation}
-  E_{g}(T) = 1,351+0,643x+0,786x^2\text{ (eV), }T=300\text{ K}
-   \label{eq:varshni}
-\end{equation}
+\noindent Um eine bessere Einordnung der Ergebnisse zu ermöglichen, wird zunächst mithilfe einer empirischen
+Formel die temperaturabhängige Lage des Lumineszenzpeaks (entspricht Größe der Bandlücke) theoretisch berechnet.
 Dazu wurde die vereinfachende Annahme getroffen, dass die Zusammensetzung des $\text{In}_x\text{Ga}_{1-x}\text{P}$
 auf Gitteranpassung an GaAs optimiert wurde. Der unter dieser Voraussetzung von uns berechnete,
-optimale Wert ist $x=0.515$. Daraus folgt durch mit x gewichteter Mittelung der Bandlücken von
-Indium und Gallium und Gl. (\ref{eq:varshni}) eine theoretische Bandlückenenergie von
+optimale Wert ist $x=0.515$. Daraus folgt für diese Zusammensetzung mit der empirischen Formel \cite{vorbereitung}
 \begin{equation}
-  E_{g,th} = 1.89\text{ eV}\text{ bei }T=300\text{ K}
-   \label{eq:evEgap300K}
+  E_{g}(x) = 1,351+0,643x+0,786x^2\text{ (eV), }T=300\text{ K}
+   \label{eq:Ex}
 \end{equation}
 
-\noindent Das entspricht einer zu erwartenden Wellenlänge von $656,52$ nm.
+\noindent eine theoretische Bandlückenenergie von
+\begin{eqnarray}
+  E_{g,th} = 1.89\text{ eV}\text{ bei }T=300\text{ K}
+  \\
+  \nonumber
+  \lambda = 656,52\text{ nm}\qquad\qquad\quad\;
+  \label{eq:evEgap300K}
+\end{eqnarray}
 
-Aufgrund der Temperaturdifferenz-bedingten Deformation und der endlichen Ausdehnung des Halbleitermaterials
-führt eine Erwärmung des Kristalls in der Theorie zu einer Verkleinerung der Bandlücke. Eine erneute gewichtete
-Mittelung der Bandlückenenergien von InP und GaP bei $T=80\text{ K}$ liefert zusammen mit (\ref{eq:evEgap300K})
+\noindent Das entspricht einer zu erwartenden Wellenlänge von $656,52$ nm.
+\newline\newline
+\noindent Die Erwärmung des Kristalls führt zu einer Verschiebung der Valenz- und Leitungsbänder und insbesondere
+zu einer Verkleinerung der Bandlücke, die gemäß der Varshni-Formel abgeschätzt werden kann:
+\begin{equation}
+  E_g(T) = E_g(0\text{ K})-\alpha\cdot\frac{T^2}{T+\beta}
+   \label{eq:varshni}
+\end{equation}
+
+\noindent Eine mit dem Mengenverhältnis x gewichtete Mittelung der Bandlückenenergien von Indium und Gallium bei $T=80\text{ K}$, berechnet nach den
+materialspezifischen Gleichungen (\ref{eq:varshni} mit $\alpha$, $\beta$ aus \cite{vorbereitung}), liefert zusammen mit (\ref{eq:evEgap300K})
 die erwartete Energieverschiebung von InGaP zwischen $T=80\text{ K}$ und $T=300\text{ K}$:
 \begin{eqnarray}
   \Delta E_g = 0,05948\text{ eV}
@@ -121,18 +131,16 @@ die erwartete Energieverschiebung von InGaP zwischen $T=80\text{ K}$ und $T=300\
 
 %%%%
 
-\noindent Die bei verschiedenen Temperaturen aufgenommenen Spektren wurden einem Gauß- bzw. Doppelgaußfit
-unterzogen (Matlab) und sind in Abbildung \ref{fig:spek} dargestellt.
-
-Deutlich zu erkennen ist die Abnahme der
-Lumineszenzintensität und die Peakverbreiterung bei steigenden Temperaturen. Oberhalb von ca. $165\text{ K}$
-ist ein Verschmieren der linken Peakhälften hin zu kürzeren Wellenlängen zu erkennen.
-
 \begin{figure}[h!]
   \centering
   \includegraphics[width=0.48\textwidth]{../Messung/allfitsplot.eps}
   \caption{\label{fig:spek} (1,2-fach) gauß-gefittete Lumineszenzspektren von InGaP zwischen $80\text{ K}$ und $250\text{ K}$ (vlnr)}
 \end{figure}
+
+\noindent Die bei verschiedenen Temperaturen aufgenommenen Spektren wurden einem Gauß- bzw. Doppelgaußfit
+unterzogen (Matlab) und sind in Abbildung \ref{fig:spek} dargestellt. Deutlich zu erkennen ist die Abnahme der
+Lumineszenzintensität und die Peakverbreiterung bei steigenden Temperaturen. Oberhalb von ca. $165\text{ K}$
+ist ein Verschmieren der linken Peakhälften hin zu kürzeren Wellenlängen zu erkennen.
 
 \begin{figure}[t]
   \centering
@@ -142,17 +150,12 @@ ist ein Verschmieren der linken Peakhälften hin zu kürzeren Wellenlängen zu e
 
 \noindent In den Abbildungen \ref{fig:EgapT} \& \ref{fig:lamT} sind die Temperaturabhängigkeiten der
 Bandlückenenergie und der entsprechenden Wellenlänge dargestellt. Zu erkennen ist eine deutliche Rotverschiebung des
-Intensitätsmaximums (Verkleinerung der Bandlücke) bei steigender Temperatur. Die Rotverschiebung konnte auch durch
+Intensitätsmaximums (Verkleinerung der Bandlücke) bei steigenden Temperaturen. Die Rotverschiebung konnte auch durch
 direkte Beobachtung festgestellt werden.
 
 Die integrierten Intensitäten der Spektrallinien sind in Abb. \ref{fig:intInt} dargestellt.
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam id facilisis ligula,
-a ultrices nibh. Nullam suscipit tellus nec mauris fermentum, ornare luctus neque
-tincidunt. Aenean commodo tincidunt varius. Phasellus faucibus metus non erat
-consectetur bibendum. Duis et luctus risus, at egestas justo. Nunc eleifend lacus
-ac laoreet scelerisque. Aenean cursus dignissim magna in ultrices. In eget nisl
-quis nisi.
+
 
 \begin{figure}[b]
   \centering
@@ -168,7 +171,7 @@ Schlussoflgerung, sollten wir mal was von nem Buch oder so entnehmen nutzen wir:
 
 
 \begin{quote}
-  Ein Zitat mit Referenz auf das Buch\cite{melissinos1966}
+  Ein Zitat mit Referenz auf das Buch \cite{melissinos1966}
 \end{quote}
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam id facilisis ligula,
@@ -253,7 +256,7 @@ Tl& 0.480 & 18.90 & 3.550 & & & & \\
 \begin{thebibliography}{99}
 \bibitem{saarland}Prof. Dr. Thomas Wichert, Photolumineszenz-Spektroskopie an Halbleitern, Universität des Saarlandes [2006]
 \bibitem{anleitung}FET Group, Benutzerhandbuch Elektrolumineszenz-Spektroskopie, Humboldt-Universität zu Berlin
-\bibitem{abkuerzung3}Autor, Titel, Verlag,  [1945]
+\bibitem{vorbereitung}FET Group, Fragen zur Vorbereitung, S.1/3, Humboldt-Universität zu Berlin
 \bibitem{abkuerzung4}Autor, Titel, Verlag,  [1945]
 \end{thebibliography}
 
