--- a/Protokoll/template.tex
+++ b/Protokoll/template.tex
@@ -100,7 +100,7 @@ optimale Wert ist $x=0.515$. Daraus folgt für diese Zusammensetzung mit der emp
    \label{eq:Ex}
 \end{equation}
 
-\noindent eine theoretische Bandlückenenergie von
+\noindent eine theoretische Bandlückenenergie mit entsprechender Wellenlänge von
 \begin{eqnarray}
   E_{g,th} = 1.89\text{ eV}\text{ bei }T=300\text{ K}
   \\
@@ -117,7 +117,7 @@ zu einer Verkleinerung der Bandlücke, die gemäß der Varshni-Formel abgeschät
 \end{equation}
 
 \noindent Eine mit dem Mengenverhältnis x gewichtete Mittelung der Bandlückenenergien von Indium und Gallium bei $T=80\text{ K}$, berechnet nach den
-materialspezifischen Gleichungen (\ref{eq:varshni} mit $\alpha$, $\beta$ aus \cite{vorbereitung}), liefert zusammen mit (\ref{eq:evEgap300K})
+materialspezifischen Gleichungen ((\ref{eq:varshni}) mit $\alpha$, $\beta$ aus \cite{vorbereitung}), liefert zusammen mit (\ref{eq:evEgap300K})
 die erwartete Energieverschiebung von InGaP zwischen $T=80\text{ K}$ und $T=300\text{ K}$:
 \begin{eqnarray}
   \Delta E_g = 0,05948\text{ eV}
