--- a/Protokoll/template.tex
+++ b/Protokoll/template.tex
@@ -140,26 +140,34 @@ unterzogen (Matlab) und sind in Abbildung \ref{fig:spek} dargestellt. Deutlich z
 Lumineszenzintensität und die Peakverbreiterung bei steigenden Temperaturen. Oberhalb von ca. $165\text{ K}$
 ist ein Verschmieren der linken Peakhälften hin zu kürzeren Wellenlängen zu erkennen.
 
+Die Abnahme der Lumineszenzintensität bei steigenden Temperaturen lässt sich mit der Fermi-Dirac-Verteilung
+verstehen: bei steigenden Temperaturen werden zunehmend auch Zustände oberhalb der Fermi-Energie, also Zustände
+im Leitungsband bzw. Donatorzustände besetzt, die aufgrund ausreichend thermischer Energie nicht ins Valenzband
+rekombinieren und somit für eine Verminderung der Anzahl der abgestrahlten Photonen pro Zeit (und Fläche) sorgen.
+
 \begin{figure}[t]
   \centering
   \includegraphics[width=0.48\textwidth]{../Messung/energtemp.eps}
   \caption{\label{fig:EgapT} Temperaturabhängigkeit der Bandlückenenergie}
 \end{figure}
 
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=0.48\textwidth]{../Messung/peaktemp.eps}
+  \caption{\label{fig:lamT} Temperaturabhängigkeit der Lum.-Wellenlänge}
+\end{figure}
+
 \noindent In den Abbildungen \ref{fig:EgapT} \& \ref{fig:lamT} sind die Temperaturabhängigkeiten der
 Bandlückenenergie und der entsprechenden Wellenlänge dargestellt. Zu erkennen ist eine deutliche Rotverschiebung des
 Intensitätsmaximums (Verkleinerung der Bandlücke) bei steigenden Temperaturen. Die Rotverschiebung konnte auch durch
-direkte Beobachtung festgestellt werden.
+direkte Beobachtung festgestellt werden. Grund hierfür ist neben der thermischen Ausdehnung des Kristallgitters die Veränderung
+des effektiven Kristallpotentials durch bei höheren Temperaturen zunehmende Elektron-Phonon-Streuung. 
 
 Die integrierten Intensitäten der Spektrallinien sind in Abb. \ref{fig:intInt} dargestellt.
 
 
 
-\begin{figure}[b]
-  \centering
-  \includegraphics[width=0.48\textwidth]{../Messung/peaktemp.eps}
-  \caption{\label{fig:lamT} Temperaturabhängigkeit der Lum.-Wellenlänge}
-\end{figure}
+
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -254,8 +262,8 @@ Tl& 0.480 & 18.90 & 3.550 & & & & \\
 \begin{thebibliography}{99}
 \bibitem{saarland}Prof. Dr. Thomas Wichert, Photolumineszenz-Spektroskopie an Halbleitern, Universität des Saarlandes [2006]
 \bibitem{anleitung}FET Group, Benutzerhandbuch Elektrolumineszenz-Spektroskopie, Humboldt-Universität zu Berlin
-\bibitem{vorbereitung}FET Group, Fragen zur Vorbereitung, S.1/3, Humboldt-Universität zu Berlin
-\bibitem{abkuerzung4}Autor, Titel, Verlag,  [1945]
+\bibitem{vorbereitung}FET Group, Fragen zur Vorbereitung, S.1-3, Humboldt-Universität zu Berlin
+\bibitem{kittel}Ch. Kittel, Einführung in die Festkörperphysik, S.159f., 12. Auflage, Oldenbourg Verlag [1999]
 \end{thebibliography}
 
 
