--- a/Protokoll/template.tex
+++ b/Protokoll/template.tex
@@ -151,23 +151,21 @@ rekombinieren und somit für eine Verminderung der Anzahl der abgestrahlten Phot
   \caption{\label{fig:EgapT} Temperaturabhängigkeit der Bandlückenenergie}
 \end{figure}
 
-\begin{figure}[h]
+\begin{figure}[b]
   \centering
   \includegraphics[width=0.48\textwidth]{../Messung/peaktemp.eps}
-  \caption{\label{fig:lamT} Temperaturabhängigkeit der Lum.-Wellenlänge}
+  \caption{\label{fig:lamT} Temperaturabhängigkeit der Lumineszenz-Wellenlänge von InGaP}
 \end{figure}
 
-\noindent In den Abbildungen \ref{fig:EgapT} \& \ref{fig:lamT} sind die Temperaturabhängigkeiten der
-Bandlückenenergie und der entsprechenden Wellenlänge dargestellt. Zu erkennen ist eine deutliche Rotverschiebung des
-Intensitätsmaximums (Verkleinerung der Bandlücke) bei steigenden Temperaturen. Die Rotverschiebung konnte auch durch
-direkte Beobachtung festgestellt werden. Grund hierfür ist neben der thermischen Ausdehnung des Kristallgitters die Veränderung
-des effektiven Kristallpotentials durch bei höheren Temperaturen zunehmende Elektron-Phonon-Streuung. 
+\newline\vspace{1em}
+\noindent In den Abbildungen \ref{fig:EgapT} \& \ref{fig:lamT} sind die Temperatur-
+abhängigkeiten der Bandlückenenergie und der entsprechenden Wellenlänge dargestellt. Bei steigenden Temperaturen wurde eine deutliche
+Rotverschiebung des Intensitätsmaximums gemessen (Verkleinerung der Bandlücke). Die Rotverschiebung konnte auch durch
+direkte Beobachtung festgestellt werden. Grund hierfür ist neben der thermischen Ausdehnung des Kristallgitters (Verringerung
+der Bindungsenergie der Gitterelektronen/-löcher) die Veränderung des effektiven Kristallpotentials durch bei höheren Temperaturen
+zunehmende Elektron-Phonon-Streuung. \cite{kittel}
 
 Die integrierten Intensitäten der Spektrallinien sind in Abb. \ref{fig:intInt} dargestellt.
-
-
-
-
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
